# ComfyUI-ialhabbal

./: .gitignore  Occlusion.py  README.md  Save_It.py  System_Prompts.json  __init__.py  batch_comfyui_processor.py  gguf_models.json  ialhabbal_VLLM.py  ialhabbal_VLLM_GGUF.py  ialhabbal_VLLM_GGUF_PromptEnhancer.py  ialhabbal_VLLM_PromptEnhancer.py  meta_prompt_extractor.py  prompt_verify.py  pyproject.toml
face_helpers/: __init__.py  face_masks.py
web/: meta_prompt_extractor.js  photo_lab.js  prompt_verify.js  save_it.js
