[project]
name = "ComfyUI-ialhabbal"
description = "A comprehensive suite of ComfyUI custom nodes for image processing, prompt verification, comparison, extraction, occlusion masking, batch loading, and advanced saving."
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/ialhabbal/ComfyUI-ialhabbal"

[tool.comfy]
PublisherId = "ialhabbal"
DisplayName = "ComfyUI-ialhabbal"
Icon = "https://raw.githubusercontent.com/ialhabbal/ComfyUI-ialhabbal/main/media/ComfyUI-ialhabbal.png"
includes = []
